test/multiphaseEuler/populationBalance/negativeDrift/postProcessing/probes/0/integerMoment0(N,v).bubbles
# Probe 0 (0.5 0.5 0.5)
# Time        0            
0             0.0307764    
0.2           0.0307758    
0.4           0.0307752    
0.6           0.0307746    
0.8           0.0307739    
1             0.0307731    
1.2           0.0307723    
1.4           0.0307714    
1.6           0.0307704    
1.8           0.0307694    
2             0.0307682    
2.2           0.0307669    
2.4           0.0307654    
2.6           0.0307636    
2.8           0.0307612    
3             0.0307578    
3.2           0.0307526    
3.4           0.0307443    
3.6           0.030731     
3.8           0.0307098    
4             0.0306769    
